--- a/.github/workflows/Dev.yml
+++ b/.github/workflows/Dev.yml
@@ -1,35 +1,12 @@
-name: workflow1
-on: 
+name: dev-workflow
+on:
   push:
-    branches: [ "main" ]
+    branches: [ "dev" ]
+  pull_request:
+    branches: [ "dev" ]
 jobs:
-  job1:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: run a single command on ubuntu machine
-        run: hostname
-      - name: step2
-        run: |
-          echo "running step 2"
-          sleep 30
-          hostname
-      - name: step3
-        run: |
-          echo "running step 3"
-          sleep 30
-          hostname
-  job2:
-    runs-on: ubuntu-latest
-    steps:
-      - name: run a single command on ubuntu machine
-        run: hostname
-      - name: step2
-        run: |
-          echo "running step 2"
-          sleep 30
-          hostname
-      - name: step3
-        run: |
-          echo "running step 3"
-          sleep 30
-          hostname
+      - name: Run a one-line script
+        run: echo running workflow in dev branch
